deployments/app-clientes-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-clientes-deploy
spec:
  selector:
    matchLabels:
      app: pedeai-clientes
  template:
    metadata:
      labels:
        app: pedeai-clientes
    spec:
      containers:
        - name: pedeai
          image: DOCKER_IMAGE
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 200m
