deployments/app-clientes-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-clientes-svc
spec:
  type: NodePort
  selector:
    app: pedeai-clientes
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
